--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li>Amharic</li>
 
                 </ul>
-                <a href="contact-html">Contact me</a>
+                <a href="contact.html">Contact me</a>
 <footer>resume@2022
 </footer>
 </body>
